H264Sharp/NativeBindings.cs


        private void LoadAndroidArmBindings()
        {
            encoderEnableDebugLogs = AndroidArm32.EncoderEnableDebugLogs;
            getEncoder = AndroidArm32.GetEncoder;
            initializeEncoderBase = AndroidArm32.InitializeEncoderBase;
            initializeEncoder = AndroidArm32.InitializeEncoder;
            getDefaultParams = AndroidArm32.GetDefaultParams;
            initializeEncoder2 = AndroidArm32.InitializeEncoder2;
            encode = AndroidArm32.Encode;
            encode1 = AndroidArm32.Encode1;
            encode2 = AndroidArm32.Encode2;
            forceIntraFrame = AndroidArm32.ForceIntraFrame;
            setMaxBitrate = AndroidArm32.SetMaxBitrate;
            setTargetFps = AndroidArm32.SetTargetFps;
            freeEncoder = AndroidArm32.FreeEncoder;
            getOptionEncoder = AndroidArm32.GetOptionEncoder;
            setOptionEncoder = AndroidArm32.SetOptionEncoder;
            // Decoder
            decoderEnableDebugLogs = AndroidArm32.DecoderEnableDebugLogs;
            getDecoder = AndroidArm32.GetDecoder;
            initializeDecoderDefault = AndroidArm32.InitializeDecoderDefault;
            initializeDecoder = AndroidArm32.InitializeDecoder;
            decodeAsYUV = AndroidArm32.DecodeAsYUV;
            decodeAsYUVext = AndroidArm32.DecodeAsYUVExt;
            decodeRgbInto = AndroidArm32.DecodeRgbInto;
            freeDecoder = AndroidArm32.FreeDecoder;
            setParallelConverterDec = AndroidArm32.SetParallelConverterDec;
            getOptionDecoder = AndroidArm32.GetOptionDecoder;
            setOptionDecoder = AndroidArm32.SetOptionDecoder;
            // Converter
            rGBXtoYUV = AndroidArm32.RGBXtoYUV;
            yUV2RGB = AndroidArm32.YUV2RGB;
            YuvNV12ToRGB = AndroidArm32.YUVNV122RGB;
            YuvNV12ToYV12 = AndroidArm32.YuvNV12ToYV12;
            downscaleImg = AndroidArm32.DownscaleImg;
            setConfig = AndroidArm32.ConverterSetConfig;
            getConfig = AndroidArm32.ConverterGetConfig;

            allocAllognedNative = AndroidArm32.AllocAllignedNative;
            freeAllognedNative = AndroidArm32.FreeAllignedNative;
        }

        private void LoadAndroidx64Bindings()
        {
            encoderEnableDebugLogs = Androidx64.EncoderEnableDebugLogs;
            getEncoder = Androidx64.GetEncoder;
            initializeEncoderBase = Androidx64.InitializeEncoderBase;
            initializeEncoder = Androidx64.InitializeEncoder;
            getDefaultParams = Androidx64.GetDefaultParams;
            initializeEncoder2 = Androidx64.InitializeEncoder2;
            encode = Androidx64.Encode;
            encode1 = Androidx64.Encode1;
            encode2 = Androidx64.Encode2;
            forceIntraFrame = Androidx64.ForceIntraFrame;
            setMaxBitrate = Androidx64.SetMaxBitrate;
            setTargetFps = Androidx64.SetTargetFps;
            freeEncoder = Androidx64.FreeEncoder;
            getOptionEncoder = Androidx64.GetOptionEncoder;
            setOptionEncoder = Androidx64.SetOptionEncoder;
            // Decoder
            decoderEnableDebugLogs = Androidx64.DecoderEnableDebugLogs;
            getDecoder = Androidx64.GetDecoder;
            initializeDecoderDefault = Androidx64.InitializeDecoderDefault;
            initializeDecoder = Androidx64.InitializeDecoder;
            decodeAsYUV = Androidx64.DecodeAsYUV;
            decodeAsYUVext = Androidx64.DecodeAsYUVExt;
            decodeRgbInto = Androidx64.DecodeRgbInto;
            freeDecoder = Androidx64.FreeDecoder;
            setParallelConverterDec = Androidx64.SetParallelConverterDec;
            getOptionDecoder = Androidx64.GetOptionDecoder;
            setOptionDecoder = Androidx64.SetOptionDecoder;
            // Converter
            rGBXtoYUV = Androidx64.RGBXtoYUV;
            yUV2RGB = Androidx64.YUV2RGB;
            YuvNV12ToRGB = Androidx64.YUVNV122RGB;
            YuvNV12ToYV12 = Androidx64.YuvNV12ToYV12;
            downscaleImg = Androidx64.DownscaleImg;
            setConfig = Androidx64.ConverterSetConfig;
            getConfig = Androidx64.ConverterGetConfig;

            allocAllognedNative = Androidx64.AllocAllignedNative;
            freeAllognedNative = Androidx64.FreeAllignedNative;
        }

        #region Interface

        internal IntPtr GetEncoder(string dllName)
                     => getEncoder(dllName);
        internal int InitializeEncoderBase(IntPtr encoder, TagEncParamBase param)
                  => initializeEncoderBase(encoder, param);
        internal int InitializeEncoder(IntPtr encoder, int width, int height, int bps, int fps, int configType)
                  => initializeEncoder(encoder, width, height, bps, fps, configType);
        internal int GetDefaultParams(IntPtr encoder, ref TagEncParamExt param)
                  => getDefaultParams(encoder, ref param);
        internal int InitializeEncoder2(IntPtr encoder, TagEncParamExt param)
                   => initializeEncoder2(encoder, param);
        internal int Encode(IntPtr encoder, ref UnsafeGenericRgbImage s, ref FrameContainer fc)
                  => encode(encoder, ref s, ref fc);
        internal int Encode1(IntPtr encoder, ref YUVImagePointer yuv, ref FrameContainer fc)
                  => encode1(encoder, ref yuv, ref fc);
        internal int Encode2(IntPtr encoder, ref YUVNV12ImagePointer yuv, ref FrameContainer fc)
                 => encode2(encoder, ref yuv, ref fc);
        internal int ForceIntraFrame(IntPtr encoder)
                  => forceIntraFrame(encoder);
        internal void SetMaxBitrate(IntPtr encoder, int target)
                   => setMaxBitrate(encoder, target);
        internal void SetTargetFps(IntPtr encoder, float target)
                   => setTargetFps(encoder, target);
        internal void FreeEncoder(IntPtr encoder)
                   => freeEncoder(encoder);
        internal int GetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value)
                  => getOptionEncoder(encoder, option, value);
        internal int SetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value)
                   => setOptionEncoder(encoder, option, value);
        internal void EncoderEnableDebugLogs(int val)
                 => encoderEnableDebugLogs(val);
        // Decoder

        internal IntPtr GetDecoder(string s)
                     => getDecoder(s);
        internal int InitializeDecoderDefault(IntPtr dec)
                  => initializeDecoderDefault(dec);
        internal int InitializeDecoder(IntPtr dec, TagSVCDecodingParam param)
                  => initializeDecoder(dec, param);
        internal int DecodeAsYUV(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref YUVImagePointer decoded)
                   => decodeAsYUV(decoder, ref frame, lenght, noDelay, ref state, ref decoded);
        internal int DecodeAsYUVExt(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, ref YUVImagePointer decoded)
                  => decodeAsYUVext(decoder, ref frame, lenght, noDelay, ref state, ref decoded);
        internal unsafe bool DecodeRgbInto(IntPtr decoder, ref byte frame, int lenght, bool noDelay, ref int state, IntPtr buffer)
                          => decodeRgbInto(decoder, ref frame, lenght, noDelay, ref state, buffer);
        internal void FreeDecoder(IntPtr decoder)
                   => freeDecoder(decoder);
        internal int GetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value)
                  => getOptionDecoder(decoder, option, value);
        internal int SetOptionDecoder(IntPtr decoder, DECODER_OPTION option, IntPtr value)
                  => setOptionDecoder(decoder, option, value);
        internal void DecoderEnableDebugLogs(int val)
                  => decoderEnableDebugLogs(val);
        // Converter
        internal void RGBXtoYUV(ref UnsafeGenericRgbImage rgb, ref YUVImagePointer yuv)
                   => rGBXtoYUV(ref rgb, ref yuv);
        internal void YUV2RGB(ref YUVImagePointer yuv, ref UnsafeGenericRgbImage rgb)
                   => yUV2RGB(ref yuv, ref rgb);
        internal void YUVNV12ToRGB(ref YUVNV12ImagePointer nv12, ref UnsafeGenericRgbImage yv12)
                 => YuvNV12ToRGB(ref nv12, ref yv12);
        internal void YUVNV12ToYV12(ref YUVNV12ImagePointer nv12, ref YUVImagePointer yv12)
                  => YuvNV12ToYV12(ref nv12, ref yv12);
        internal void DownscaleImg(ref UnsafeGenericRgbImage from, ref UnsafeGenericRgbImage to, int mul)
                   => downscaleImg(ref from, ref to, mul);
        internal void ConverterGetConfig(ref ConverterConfig c)
                  => getConfig(ref c);
        internal void ConverterSetConfig(ConverterConfig val)
                  => setConfig(val);
        internal IntPtr AllocAllignedNative( int size)
                   => allocAllognedNative(size);
        internal void FreeAllignedNative(IntPtr p)
                  => freeAllognedNative(p);

        #endregion
    }

    public unsafe class Winx86
    {
        const string DllName = Defines.WrapperDllWinx86;

        // Encoder
        [DllImport(DllName, EntryPoint = "EncoderEnableDebugLogs", CallingConvention = CallingConvention.Cdecl)]
        internal static extern void EncoderEnableDebugLogs(int val);
        [DllImport(DllName, EntryPoint = "GetEncoder", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        internal static extern IntPtr GetEncoder(string dllName);

        [DllImport(DllName, EntryPoint = "InitializeEncoderBase", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int InitializeEncoderBase(IntPtr encoder, TagEncParamBase param);

        [DllImport(DllName, EntryPoint = "InitializeEncoder", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int InitializeEncoder(IntPtr encoder, int width, int height, int bps, int fps, int configType);

        [DllImport(DllName, EntryPoint = "GetDefaultParams", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int GetDefaultParams(IntPtr encoder, ref TagEncParamExt param);

        [DllImport(DllName, EntryPoint = "InitializeEncoder2", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int InitializeEncoder2(IntPtr encoder, TagEncParamExt param);

        [DllImport(DllName, EntryPoint = "Encode", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int Encode(IntPtr encoder, ref UnsafeGenericRgbImage s, ref FrameContainer fc);

        [DllImport(DllName, EntryPoint = "Encode1", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int Encode1(IntPtr encoder, ref YUVImagePointer yuv, ref FrameContainer fc);

        [DllImport(DllName, EntryPoint = "Encode2", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int Encode2(IntPtr encoder, ref YUVNV12ImagePointer yuv, ref FrameContainer fc);

        [DllImport(DllName, EntryPoint = "ForceIntraFrame", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int ForceIntraFrame(IntPtr encoder);

        [DllImport(DllName, EntryPoint = "SetMaxBitrate", CallingConvention = CallingConvention.Cdecl)]
        internal static extern void SetMaxBitrate(IntPtr encoder, int target);

        [DllImport(DllName, EntryPoint = "SetTargetFps", CallingConvention = CallingConvention.Cdecl)]
        internal static extern void SetTargetFps(IntPtr encoder, float target);

        [DllImport(DllName, EntryPoint = "FreeEncoder", CallingConvention = CallingConvention.Cdecl)]
        internal static extern void FreeEncoder(IntPtr encoder);

        [DllImport(DllName, EntryPoint = "GetOptionEncoder", CallingConvention = CallingConvention.Cdecl)]
        internal static extern int GetOptionEncoder(IntPtr encoder, ENCODER_OPTION option, IntPtr value);
